crates/ruff_python_parser/src/parser/snapshots/ruff_python_parser__parser__tests__top_star_subscript_mixed_star_then_int.snap
---
source: crates/ruff_python_parser/src/parser/tests.rs
expression: parsed.syntax()
---
ModModule {
    node_index: NodeIndex(None),
    range: 0..16,
    body: [
        AnnAssign(
            StmtAnnAssign {
                node_index: NodeIndex(None),
                range: 0..15,
                decorator_list: [],
                target: Name(
                    ExprName {
                        node_index: NodeIndex(None),
                        range: 0..1,
                        id: Name("a"),
                        ctx: Store,
                    },
                ),
                annotation: Subscript(
                    ExprSubscript {
                        node_index: NodeIndex(None),
                        range: 3..15,
                        value: Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 3..7,
                                id: Name("dict"),
                                ctx: Load,
                            },
                        ),
                        slice: Tuple(
                            ExprTuple {
                                node_index: NodeIndex(None),
                                range: 8..14,
                                elts: [
                                    Starred(
                                        ExprStarred {
                                            node_index: NodeIndex(None),
                                            range: 8..9,
                                            value: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 9..9,
                                                    id: Name(""),
                                                    ctx: Invalid,
                                                },
                                            ),
                                            ctx: Load,
                                        },
                                    ),
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 11..14,
                                            id: Name("int"),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: false,
                                is_anon_named_tuple: false,
                                is_anon_named_tuple_value: false,
                                callable_shape: None,
                                is_parameter_shape: false,
                            },
                        ),
                        ctx: Load,
                        is_typeof: false,
                        is_type_decoration: false,
                    },
                ),
                value: None,
                simple: true,
                is_context: false,
            },
        ),
    ],
}
