crates/ruff_python_parser/src/parser/snapshots/ruff_python_parser__parser__tests__top_star_subscript_multi.snap
---
source: crates/ruff_python_parser/src/parser/tests.rs
expression: parsed.syntax()
---
ModModule {
    node_index: NodeIndex(None),
    range: 0..14,
    body: [
        AnnAssign(
            StmtAnnAssign {
                node_index: NodeIndex(None),
                range: 0..13,
                decorator_list: [],
                target: Name(
                    ExprName {
                        node_index: NodeIndex(None),
                        range: 0..1,
                        id: Name("a"),
                        ctx: Store,
                    },
                ),
                annotation: Subscript(
                    ExprSubscript {
                        node_index: NodeIndex(None),
                        range: 3..13,
                        value: Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 3..7,
                                id: Name("dict"),
                                ctx: Load,
                            },
                        ),
                        slice: Tuple(
                            ExprTuple {
                                node_index: NodeIndex(None),
                                range: 8..12,
                                elts: [
                                    Starred(
                                        ExprStarred {
                                            node_index: NodeIndex(None),
                                            range: 8..9,
                                            value: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 9..9,
                                                    id: Name(""),
                                                    ctx: Invalid,
                                                },
                                            ),
                                            ctx: Load,
                                        },
                                    ),
                                    Starred(
                                        ExprStarred {
                                            node_index: NodeIndex(None),
                                            range: 11..12,
                                            value: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 12..12,
                                                    id: Name(""),
                                                    ctx: Invalid,
                                                },
                                            ),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: false,
                                is_anon_named_tuple: false,
                                is_anon_named_tuple_value: false,
                                callable_shape: None,
                                is_parameter_shape: false,
                            },
                        ),
                        ctx: Load,
                        is_typeof: false,
                        is_type_decoration: false,
                    },
                ),
                value: None,
                simple: true,
            },
        ),
    ],
}
